--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "chai": "^3.5.0",
     "enzyme": "^2.2.0",
     "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.0",
+    "eslint-plugin-jsx-a11y": "^1.0.3",
     "eslint-plugin-react": "^5.0.1",
     "jsdom": "^8.4.0",
     "mocha": "^2.4.5",
