--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "YouTube API client",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha -w test/.setup.js test/*.spec.js",
+    "test": "mocha -w test/.setup.js test/**/*.spec.js",
     "lint": "eslint src"
   },
   "repository": {
@@ -16,6 +16,7 @@
   "license": "MIT",
   "homepage": "https://github.com/jrunning/jrunning-youtube",
   "devDependencies": {
+    "babel-cli": "^6.7.7",
     "babel-core": "^6.0.20",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.0.1",
@@ -40,7 +41,6 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "googleapis": "^5.2.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
   }
