--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.0.1",
     "react-hot-loader": "^1.3.0",
+    "react-youtube-player": "^0.3.3",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "webpack": "^1.12.2",
