--- a/package.json
+++ b/package.json
@@ -31,13 +31,18 @@
     "eslint-plugin-import": "^1.6.0",
     "eslint-plugin-jsx-a11y": "^1.0.3",
     "eslint-plugin-react": "^5.0.1",
+    "extract-loader": "0.0.2",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
     "jsdom": "^8.4.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^15.0.1",
+    "react-geosuggest": "^1.22.0",
     "react-hot-loader": "^1.3.0",
     "react-youtube-player": "^0.3.3",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
+    "string-replace-webpack-plugin": "0.0.3",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
